Ensure that webpack build always runs during project build and breaks the build if there are errors.

--- a/Rnwood.Smtp4dev/ClientApp/css/site.css
+++ b/Rnwood.Smtp4dev/ClientApp/css/site.css
@@ -96,6 +96,13 @@ iframe {
 h1 {
     margin: 0;
     font-size: 1.2em;
+    float: left;
+}
+
+h2 {
+    margin: 0;
+    font-size: 1em;
+    float: right;
 }
 
 header {
